content/templates/subject/styles.css
{# XXX this needs to have template variables for colors #}
{%- set section = d.Categoria_Seccion -%}
/* mesa_seccion.css */

.disabledEfect {
position:absolute;
width:645px;
height:337px;
margin:20px 0 0 6px;
position:expression('absolute');
z-index:1;
background:gray;
background-position:center;
background-repeat:no-repeat;
}

.disabledEfectCtrl {
margin:10px 0 0 6px;
position:absolute;
background-color:#AAA;
filter:alpha(opacity=70);
opacity:0.7;
position:expression('absolute');
z-index:1000;
width:646px;
height:355px;
}

.disabledEfectCtrl object {
width:95px;
height:100px;
display:block;
position:relative;
margin:118px 0 0 275px;
}

.globoArticulo {
position:absolute;
position:expression('absolute');
z-index:9999;
width:387px;
margin-top:-65px;
margin-left:-30px;
}

.globoArticuloTop {
float:left;
width:342px;
background-image:url(/imagenes/rediseno/imagenes/globoArticuloTop-back.png);
padding:15px 15px 0 30px;
}

.globoArticuloRightTop {
float:left;
width:342px;
background-image:url(/imagenes/rediseno/imagenes/globoArticuloRightTop-back.png);
padding:15px 30px 0 15px;
}

.globoArticuloTapa {
float:left;
width:105px;
border:solid 1px #666;
}

.globoArticuloInfo {
float:left;
width:227px;
margin-left:8px;
}

.globoArticuloInfo #artTitulo {
display:block;
font-size:17px;
font-weight:bold;
line-height:16px;
margin-bottom:5px;
}

.globoArticuloInfo #trAutor {
display:block;
border-bottom:dotted 1px #666;
padding-bottom:4px;
font-size:13px;
margin-bottom:10px;
}

.globoArticuloInfo #trAutor a {
font-size:13px;
}

.globoArticuloInfo .calificacionMod {
padding-top:0;
margin:-5px 0 10px;
float:left;
width:220px;
}

.globoArticuloInfo .calificacionMod span {
margin-top:2px;
}

.globoArticuloInfo #tiempoEntrega {
font-size:9px;
padding-left:10px;
background-color:#f5f5f5;
position:absolute;
position:expression('absolute');
width:220px;
z-index:10000;
border:solid 1px #ccc;
}

.globoArticuloInfo div {
display:block;
font-size:11px;
margin-bottom:4px;
line-height:11px;
}

.globoArticuloInfo a {
font-size:11px;
}

a.globoArticuloMasInfo {
/*display:block;border-top:dotted 1px #666;border-bottom:dotted 1px #666;*/
padding:3px 0;
font-size:14px;
margin:10px 0 5px;
}

div.globoArticuloMasInfo {
display:block;
border-top:dotted 1px #666;
border-bottom:dotted 1px #666;
padding:6px 0;
font-size:14px;
margin:10px 0 5px;
}

.globoArticuloBottom {
float:left;
width:244px;
background-image:url(/imagenes/rediseno/imagenes/globoArticuloBottom-back.png);
height:90px;
background-repeat:no-repeat;
padding-left:143px;
}

.globoArticuloRightBottom {
float:left;
width:244px;
background-image:url(/imagenes/rediseno/imagenes/globoArticuloRightBottom-back.png);
height:90px;
background-repeat:no-repeat;
padding-left:130px;
}

.globoArticuloPrecio {
display:block;
font-weight:bold;
font-size:15px;
}

.globoArticuloComprar,.globoArticuloPedir {
width:177px;
height:46px;
display:block;
cursor:pointer;
position:relative;
left:-8px;
}

.globoArticuloLoad {
overflow:hidden;
position:fixed;
background-color:#AAA;
position:expression('absolute');
z-index:1;
}

//.divMesa {
position:relative;
width:645px;
height:308px;
padding:1px 0;
overflow:hidden;
background-image:url(/imagenes/rediseno/imagenes/divMesaSecciones-back.jpg);
background-repeat:no-repeat;
margin:0 0 0 7px;
}

.divMesa {
position:relative;
width:645px;
height:308px;
padding:1px 0;
overflow:hidden;
background:gray;
background-repeat:no-repeat;
margin:0 0 0 7px;
}

.divMesa table {
}

.imgTapa {
border:0;
}

.divMesa .arbolShadow {
float:left;
margin:5px 0 3px;
display:inline;
background-image:url(/imagenes/rediseno/imagenes/comun/arbolShadow-back.png);
background-color:transparent;
}

.arbolShadow img {
border:none;
display:block;
margin:-3px 3px 3px -3px;
width:98px;
height:auto;
cursor:pointer;
position:relative;
}

.divMesaCont {
float:left;
margin-left:7px;
display:inline;
}

.mesaSiguiente,.mesaAnterior,.mesaSiguienteDeshabilitada,.mesaAnteriorDeshabilitada {
width:645px;
height:22px;
border:none;
margin-left:7px;
}

.mesaSiguiente {
margin-top:1px;
cursor:pointer;
}

.mesaSiguiente:hover {
background-image:url(/imagenes/rediseno/imagenes/comun/mesaSiguiente-hover.gif);
}

.mesaAnterior {
margin-bottom:1px;
margin-top:10px;
cursor:pointer;
}

.mesaAnterior:hover {
background-image:url(/imagenes/rediseno/imagenes/comun/mesaAnterior-hover.gif);
}

.mesaSiguienteDeshabilitada {
background-image:url(/imagenes/rediseno/imagenes/comun/mesaSiguienteGris.gif);
margin-top:1px;
cursor:default;
}

.mesaAnteriorDeshabilitada {
background-image:url(/imagenes/rediseno/imagenes/comun/mesaAnteriorGris.gif);
margin-bottom:1px;
margin-top:10px;
cursor:default;
}

{%- if section == 1 -%}
/* seccion_libros.css */

a {
color:#70965B;
text-decoration:none;
font-size:12px;
}

a:hover {
color:#F8A03A;
}

a:visited {
color:#F8A03A;
}

.hBuscador {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/hBuscador-back.png);
}

.hBuscMenu {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/hBuscMenu-back.png);
}

a.hBuscMenuDesplItem:hover {
background-color:#F8A03A;
color:#FFF;
}

.hServClientes {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/hServClientes-back.png);
}

.hModUsuarioBack {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/hModUsuario-back.png);
}

.panelMensajes a:visited {
color:#70965B;
}

.panelMensajes a:hover {
color:#F8A03A;
}

.panelMsjCerrar {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/b-panelMsjCerrar.gif);
}

.panelMsjCerrar:hover {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/b-panelMsjCerrar-hover.gif);
}

.panelMsjAbrir {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/b-panelMsjAbrir.gif);
}

.panelMsjAbrir:hover {
background-image:url(/imagenes/rediseno/imagenes/seccionLibros/b-panelMsjAbrir-hover.gif);
}
/* ... */

